--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-variables";
 @import "bootstrap";
+@import "font-awesome";
 
 // Remove text-shadow in selection highlight:
 // https://twitter.com/miketaylr/status/12228805301
